# ScriptEvent_Transpiler

./: LICENSE  README.md  class_generator.py  main.py  pseudo_lua_parser.py  script_event_generator.py
CppApp/: CMakeLists.txt  README.md  configure_win.bat  regenerate_antlr.bat
CppApp/source/: ClassGenerator.cpp  ClassGenerator.h  LuaFunctionData.cpp  LuaFunctionData.h  LuaScriptEvent.g4  PseudoLuaParser.cpp  PseudoLuaParser.h  ScriptEventGenerator.cpp  ScriptEventGenerator.h  main.cpp
PythonApp/: README.md  class_generator.py  main.py  pseudo_lua_parser.py  script_event_generator.py
PythonApp/lexpar/: LuaScriptEvent.g4  LuaScriptEvent.tokens  LuaScriptEventLexer.interp  LuaScriptEventLexer.py  LuaScriptEventParser.py  LuaScriptEventVisitor.py
Samples/: demo_interface.lua
docs/: validtypes.txt
lexpar/: LuaScriptEvent.interp  LuaScriptEventLexer.interp  LuaScriptEventLexer.py  LuaScriptEventParser.py  LuaScriptEventVisitor.py  compile_grammar.md
